# agentic-finance

./: README.md  pyproject.toml
src/agent/: __init__.py  cli.py  config.py  generate.py  index.py  ingest.py  retrieve.py  seo_rules.py  validate.py
