[project]
name = "agentic-finance"
version = "0.1.0"
description = "KB-grounded financial content agent skeleton"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
agent-cli = "agent.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
